--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 PORT=5000
-DB_NAME
-DB_USER
-DB_PASSWORD
-DB_HOST
-DB_PORT
+DB_NAME=resizer
+DB_USER='<secret>'
+DB_PASSWORD='<secret>'
+DB_HOST=localhost
+DB_PORT=5432
+S3_ENDPOINT_URL='https://storage.yandexcloud.net'
+S3_ACCESS_KEY_ID='<secret>'
+S3_SECRET_ACCESS_KEY='<secret>'
