--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "build": "tsc && tsc-alias",
     "start": "node dist/index.js",
+    "build-and-start": "npm run build && npm run start",
     "start:dev": "nodemon src/index.ts",
     "lint": "eslint",
     "prepare": "husky"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
