--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ DB_PORT=5432
 S3_ENDPOINT_URL='https://storage.yandexcloud.net'
 S3_ACCESS_KEY_ID='<secret>'
 S3_SECRET_ACCESS_KEY='<secret>'
+S3_BUCKET_NAME='resizer-alpha-1gb'
+IMAGE_PROXY_HOST='http://localhost:5001'
