--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.1",
     "pg": "^8.14.1",
     "request": "^2.88.2",
     "sequelize": "^6.37.7",
@@ -24,6 +25,7 @@
     "@eslint/js": "^9.24.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/express-fileupload": "^1.5.1",
     "@types/node": "^22.14.0",
     "@types/request": "^2.48.12",
     "eslint": "^9.24.0",
