--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pg": "^8.14.1",
     "request": "^2.88.2",
     "sequelize": "^6.37.7",
+    "sharp": "^0.34.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
