--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "tsc && tsc-alias",
+    "build": "rm -rf ./dist && tsc && tsc-alias",
     "start": "node dist/index.js",
     "build-and-start": "npm run build && npm run start",
     "start:dev": "nodemon src/index.ts",
@@ -20,7 +20,8 @@
     "request": "^2.88.2",
     "sequelize": "^6.37.7",
     "sharp": "^0.34.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
