--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "request": "^2.88.2",
     "sequelize": "^6.37.7",
     "sharp": "^0.34.1",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
+    "yamljs": "^0.3.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -30,6 +32,8 @@
     "@types/express-fileupload": "^1.5.1",
     "@types/node": "^22.14.0",
     "@types/request": "^2.48.12",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/yamljs": "^0.2.34",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.6",
